# bmi_calculator

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: bmi.rs  db.rs  error.rs  height.rs  main.rs  tests.rs  web.rs  weight.rs
templates/: form.html  index.html  newentry.html  newentryerror.html
