[package]
name = "bmi-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
float_eq = "1.0.0"
inquire = "0.6.1"
log = "0.4.17"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "local-offset"] }
thiserror = "1"
